--- a/dev/_modules/smac/utils/io/cmd_reader.html
+++ b/dev/_modules/smac/utils/io/cmd_reader.html
@@ -260,11 +260,8 @@
 <span class="kn">import</span> <span class="nn">typing</span>
 
 <span class="n">__author__</span> <span class="o">=</span> <span class="s2">&quot;Marius Lindauer&quot;</span>
-<span class="n">__copyright__</span> <span class="o">=</span> <span class="s2">&quot;Copyright 2015, ML4AAD&quot;</span>
+<span class="n">__copyright__</span> <span class="o">=</span> <span class="s2">&quot;Copyright 2018, ML4AAD&quot;</span>
 <span class="n">__license__</span> <span class="o">=</span> <span class="s2">&quot;3-clause BSD&quot;</span>
-<span class="n">__maintainer__</span> <span class="o">=</span> <span class="s2">&quot;Marius Lindauer&quot;</span>
-<span class="n">__email__</span> <span class="o">=</span> <span class="s2">&quot;lindauer@cs.uni-freiburg.de&quot;</span>
-<span class="n">__version__</span> <span class="o">=</span> <span class="s2">&quot;0.0.1&quot;</span>
 
 <span class="n">in_reader</span> <span class="o">=</span> <span class="n">InputReader</span><span class="p">()</span>
 <span class="n">parsed_scen_args</span> <span class="o">=</span> <span class="p">{}</span>
@@ -654,16 +651,7 @@
                                <span class="n">default</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span> <span class="nb">type</span><span class="o">=</span><span class="n">truthy</span><span class="p">,</span>
                                <span class="n">help</span><span class="o">=</span><span class="s2">&quot;If true, *SMAC* will abort if the first run of &quot;</span>
                                     <span class="s2">&quot;the target algorithm crashes.&quot;</span><span class="p">)</span>
-        <span class="n">smac_opts</span><span class="o">.</span><span class="n">add_argument</span><span class="p">(</span><span class="s2">&quot;--always-race-default&quot;</span><span class="p">,</span> <span class="s2">&quot;--always_race_default&quot;</span><span class="p">,</span> <span class="n">dest</span><span class="o">=</span><span class="s1">&#39;always_race_default&#39;</span><span class="p">,</span>
-                               <span class="n">default</span><span class="o">=</span><span class="kc">False</span><span class="p">,</span> <span class="nb">type</span><span class="o">=</span><span class="n">truthy</span><span class="p">,</span>
-                               <span class="n">help</span><span class="o">=</span><span class="s2">&quot;[dev] Race new incumbents always against default &quot;</span>
-                                    <span class="s2">&quot;configuration.&quot;</span><span class="p">)</span>
-        <span class="n">smac_opts</span><span class="o">.</span><span class="n">add_argument</span><span class="p">(</span><span class="s2">&quot;--intensification-percentage&quot;</span><span class="p">,</span> <span class="s2">&quot;--intensification_percentage&quot;</span><span class="p">,</span>
-                               <span class="n">dest</span><span class="o">=</span><span class="s1">&#39;intensification_percentage&#39;</span><span class="p">,</span>
-                               <span class="n">default</span><span class="o">=</span><span class="mf">0.5</span><span class="p">,</span> <span class="nb">type</span><span class="o">=</span><span class="nb">float</span><span class="p">,</span>
-                               <span class="n">help</span><span class="o">=</span><span class="s2">&quot;[dev] The fraction of time to be used on &quot;</span>
-                                    <span class="s2">&quot;intensification (versus choice of next &quot;</span>
-                                    <span class="s2">&quot;Configurations).&quot;</span><span class="p">)</span>
+
         <span class="n">smac_opts</span><span class="o">.</span><span class="n">add_argument</span><span class="p">(</span><span class="s2">&quot;--minr&quot;</span><span class="p">,</span> <span class="s2">&quot;--minR&quot;</span><span class="p">,</span> <span class="n">dest</span><span class="o">=</span><span class="s1">&#39;minR&#39;</span><span class="p">,</span>
                                <span class="n">default</span><span class="o">=</span><span class="mi">1</span><span class="p">,</span> <span class="nb">type</span><span class="o">=</span><span class="nb">int</span><span class="p">,</span>
                                <span class="n">help</span><span class="o">=</span><span class="s2">&quot;[dev] Minimum number of calls per configuration.&quot;</span><span class="p">)</span>
@@ -696,6 +684,69 @@
         <span class="n">smac_opts</span><span class="o">.</span><span class="n">add_argument</span><span class="p">(</span><span class="s2">&quot;--hydra-iterations&quot;</span><span class="p">,</span> <span class="s2">&quot;--hydra_iterations&quot;</span><span class="p">,</span> <span class="n">dest</span><span class="o">=</span><span class="s2">&quot;hydra_iterations&quot;</span><span class="p">,</span>
                                <span class="n">default</span><span class="o">=</span><span class="mi">3</span><span class="p">,</span> <span class="nb">type</span><span class="o">=</span><span class="nb">int</span><span class="p">,</span>
                                <span class="n">help</span><span class="o">=</span><span class="s2">&quot;[dev] number of hydra iterations. Only active if mode is set to Hydra&quot;</span><span class="p">)</span>
+
+        <span class="c1"># Hyperparameters</span>
+        <span class="n">smac_opts</span><span class="o">.</span><span class="n">add_argument</span><span class="p">(</span><span class="s2">&quot;--always-race-default&quot;</span><span class="p">,</span> <span class="s2">&quot;--always_race_default&quot;</span><span class="p">,</span> <span class="n">dest</span><span class="o">=</span><span class="s1">&#39;always_race_default&#39;</span><span class="p">,</span>
+                               <span class="n">default</span><span class="o">=</span><span class="kc">False</span><span class="p">,</span> <span class="nb">type</span><span class="o">=</span><span class="n">truthy</span><span class="p">,</span>
+                               <span class="n">help</span><span class="o">=</span><span class="s2">&quot;[dev] Race new incumbents always against default &quot;</span>
+                                    <span class="s2">&quot;configuration.&quot;</span><span class="p">)</span>
+        <span class="n">smac_opts</span><span class="o">.</span><span class="n">add_argument</span><span class="p">(</span><span class="s2">&quot;--intensification-percentage&quot;</span><span class="p">,</span> <span class="s2">&quot;--intensification_percentage&quot;</span><span class="p">,</span>
+                               <span class="n">dest</span><span class="o">=</span><span class="s1">&#39;intensification_percentage&#39;</span><span class="p">,</span>
+                               <span class="n">default</span><span class="o">=</span><span class="mf">0.5</span><span class="p">,</span> <span class="nb">type</span><span class="o">=</span><span class="nb">float</span><span class="p">,</span>
+                               <span class="n">help</span><span class="o">=</span><span class="s2">&quot;[dev] The fraction of time to be used on &quot;</span>
+                                    <span class="s2">&quot;intensification (versus choice of next &quot;</span>
+                                    <span class="s2">&quot;Configurations).&quot;</span><span class="p">)</span>
+
+        <span class="c1">## RF Hyperparameters</span>
+        <span class="n">smac_opts</span><span class="o">.</span><span class="n">add_argument</span><span class="p">(</span><span class="s2">&quot;--rf_num_trees&quot;</span><span class="p">,</span><span class="s2">&quot;--rf-num-trees&quot;</span><span class="p">,</span>
+                               <span class="n">dest</span><span class="o">=</span><span class="s1">&#39;rf_num_trees&#39;</span><span class="p">,</span>
+                               <span class="n">default</span><span class="o">=</span><span class="mi">10</span><span class="p">,</span> <span class="nb">type</span><span class="o">=</span><span class="nb">int</span><span class="p">,</span>
+                               <span class="n">help</span><span class="o">=</span><span class="s2">&quot;[dev] Number of trees in the random forest (&gt; 1).&quot;</span><span class="p">)</span>
+        <span class="n">smac_opts</span><span class="o">.</span><span class="n">add_argument</span><span class="p">(</span><span class="s2">&quot;--rf_do_bootstrapping&quot;</span><span class="p">,</span><span class="s2">&quot;--rf-do-bootstrapping&quot;</span><span class="p">,</span>
+                       <span class="n">dest</span><span class="o">=</span><span class="s1">&#39;rf_do_bootstrapping&#39;</span><span class="p">,</span>
+                       <span class="n">default</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span> <span class="nb">type</span><span class="o">=</span><span class="nb">bool</span><span class="p">,</span>
+                       <span class="n">help</span><span class="o">=</span><span class="s2">&quot;[dev] Use bootstraping in random forest.&quot;</span><span class="p">)</span>
+        <span class="n">smac_opts</span><span class="o">.</span><span class="n">add_argument</span><span class="p">(</span><span class="s2">&quot;--rf_ratio_features&quot;</span><span class="p">,</span><span class="s2">&quot;--rf-ratio-features&quot;</span><span class="p">,</span>
+                       <span class="n">dest</span><span class="o">=</span><span class="s1">&#39;rf_ratio_features&#39;</span><span class="p">,</span>
+                       <span class="n">default</span><span class="o">=</span><span class="mf">5.</span> <span class="o">/</span> <span class="mf">6.</span><span class="p">,</span> <span class="nb">type</span><span class="o">=</span><span class="nb">float</span><span class="p">,</span>
+                       <span class="n">help</span><span class="o">=</span><span class="s2">&quot;[dev] Ratio of sampled features in each split ([0.,1.]).&quot;</span><span class="p">)</span>
+        <span class="n">smac_opts</span><span class="o">.</span><span class="n">add_argument</span><span class="p">(</span><span class="s2">&quot;--rf_min_samples_split&quot;</span><span class="p">,</span><span class="s2">&quot;--rf-min-samples-split&quot;</span><span class="p">,</span>
+                       <span class="n">dest</span><span class="o">=</span><span class="s1">&#39;rf_min_samples_split&#39;</span><span class="p">,</span>
+                       <span class="n">default</span><span class="o">=</span><span class="mi">3</span><span class="p">,</span> <span class="nb">type</span><span class="o">=</span><span class="nb">int</span><span class="p">,</span>
+                       <span class="n">help</span><span class="o">=</span><span class="s2">&quot;[dev] Minimum number of samples to split for building a tree in the random forest.&quot;</span><span class="p">)</span>
+        <span class="n">smac_opts</span><span class="o">.</span><span class="n">add_argument</span><span class="p">(</span><span class="s2">&quot;--rf_min_samples_leaf&quot;</span><span class="p">,</span><span class="s2">&quot;--rf-min-samples-leaf&quot;</span><span class="p">,</span>
+                       <span class="n">dest</span><span class="o">=</span><span class="s1">&#39;rf_min_samples_leaf&#39;</span><span class="p">,</span>
+                       <span class="n">default</span><span class="o">=</span><span class="mi">3</span><span class="p">,</span> <span class="nb">type</span><span class="o">=</span><span class="nb">int</span><span class="p">,</span>
+                       <span class="n">help</span><span class="o">=</span><span class="s2">&quot;[dev] Minimum required number of samples in each leaf of a tree in the random forest.&quot;</span><span class="p">)</span>
+        <span class="n">smac_opts</span><span class="o">.</span><span class="n">add_argument</span><span class="p">(</span><span class="s2">&quot;--rf_max_depth&quot;</span><span class="p">,</span><span class="s2">&quot;--rf-max-depth&quot;</span><span class="p">,</span>
+                       <span class="n">dest</span><span class="o">=</span><span class="s1">&#39;rf_max_depth&#39;</span><span class="p">,</span>
+                       <span class="n">default</span><span class="o">=</span><span class="mi">20</span><span class="p">,</span> <span class="nb">type</span><span class="o">=</span><span class="nb">int</span><span class="p">,</span>
+                       <span class="n">help</span><span class="o">=</span><span class="s2">&quot;[dev] Maximum depth of each tree in the random forest.&quot;</span><span class="p">)</span>
+        <span class="c1">## AcquisitionOptimizer SLS</span>
+        <span class="n">smac_opts</span><span class="o">.</span><span class="n">add_argument</span><span class="p">(</span><span class="s2">&quot;--sls_n_steps_plateau_walk&quot;</span><span class="p">,</span><span class="s2">&quot;--sls-n-steps-plateau-walk&quot;</span><span class="p">,</span>
+               <span class="n">dest</span><span class="o">=</span><span class="s1">&#39;sls_n_steps_plateau_walk&#39;</span><span class="p">,</span>
+               <span class="n">default</span><span class="o">=</span><span class="mi">10</span><span class="p">,</span> <span class="nb">type</span><span class="o">=</span><span class="nb">int</span><span class="p">,</span>
+               <span class="n">help</span><span class="o">=</span><span class="s2">&quot;[dev] Maximum number of steps on plateaus during &quot;</span>
+                    <span class="s2">&quot;the optimization of the acquisition function.&quot;</span><span class="p">)</span>
+        <span class="n">smac_opts</span><span class="o">.</span><span class="n">add_argument</span><span class="p">(</span><span class="s2">&quot;--sls_max_steps&quot;</span><span class="p">,</span><span class="s2">&quot;--sls-max-steps&quot;</span><span class="p">,</span>
+               <span class="n">dest</span><span class="o">=</span><span class="s1">&#39;sls_max_steps&#39;</span><span class="p">,</span>
+               <span class="n">default</span><span class="o">=</span><span class="kc">None</span><span class="p">,</span> <span class="nb">type</span><span class="o">=</span><span class="nb">int</span><span class="p">,</span>
+               <span class="n">help</span><span class="o">=</span><span class="s2">&quot;[dev] Maximum number of local search steps in one iteration&quot;</span>
+                    <span class="s2">&quot; during the optimization of the acquisition function.&quot;</span><span class="p">)</span>
+        <span class="c1">## Intensification</span>
+        <span class="n">smac_opts</span><span class="o">.</span><span class="n">add_argument</span><span class="p">(</span><span class="s2">&quot;--intens_adaptive_capping_slackfactor&quot;</span><span class="p">,</span><span class="s2">&quot;--intens-adaptive-capping-slackfactork&quot;</span><span class="p">,</span>
+               <span class="n">dest</span><span class="o">=</span><span class="s1">&#39;intens_adaptive_capping_slackfactor&#39;</span><span class="p">,</span>
+               <span class="n">default</span><span class="o">=</span><span class="mf">1.2</span><span class="p">,</span> <span class="nb">type</span><span class="o">=</span><span class="nb">float</span><span class="p">,</span>
+               <span class="n">help</span><span class="o">=</span><span class="s2">&quot;[dev] Slack factor of adpative capping (factor * adpative cutoff).&quot;</span>
+                    <span class="s2">&quot; Only active if obj is runtime.&quot;</span>
+                    <span class="s2">&quot; If set to very large number it practically deactivates adaptive capping.&quot;</span><span class="p">)</span>
+        <span class="n">smac_opts</span><span class="o">.</span><span class="n">add_argument</span><span class="p">(</span><span class="s2">&quot;--intens_min_chall&quot;</span><span class="p">,</span><span class="s2">&quot;--intens-min-chall&quot;</span><span class="p">,</span>
+               <span class="n">dest</span><span class="o">=</span><span class="s1">&#39;intens_min_chall&#39;</span><span class="p">,</span>
+               <span class="n">default</span><span class="o">=</span><span class="mi">2</span><span class="p">,</span> <span class="nb">type</span><span class="o">=</span><span class="nb">int</span><span class="p">,</span>
+               <span class="n">help</span><span class="o">=</span><span class="s2">&quot;[dev] Minimal number of challengers to be considered in each intensification run (&gt; 1).&quot;</span>
+                    <span class="s2">&quot; Set to 1 and in combination with very small intensification-percentage.&quot;</span>
+                    <span class="s2">&quot; it will deactivate randomly sampled configurations&quot;</span>
+                    <span class="s2">&quot; (and hence, extrapolation of random forest will be an issue.)&quot;</span><span class="p">)</span>
 
         <span class="bp">self</span><span class="o">.</span><span class="n">parser</span><span class="o">.</span><span class="n">add_parser</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">smac_parser</span><span class="p">)</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">smac_cmd_actions</span><span class="p">,</span> <span class="bp">self</span><span class="o">.</span><span class="n">smac_cmd_translations</span> <span class="o">=</span> <span class="n">CMDReader</span><span class="o">.</span><span class="n">_extract_action_info</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">smac_parser</span><span class="o">.</span><span class="n">_actions</span><span class="p">)</span>
