--- a/dev/genindex.html
+++ b/dev/genindex.html
@@ -395,6 +395,8 @@
 </li>
       <li><a href="apidoc/smac.optimizer.random_configuration_chooser.html#smac.optimizer.random_configuration_chooser.ChooserNoCoolDown">ChooserNoCoolDown (class in smac.optimizer.random_configuration_chooser)</a>
 </li>
+      <li><a href="apidoc/smac.smac_cli.html#smac.smac_cli.cmd_line_call">cmd_line_call() (in module smac.smac_cli)</a>
+</li>
       <li><a href="apidoc/smac.utils.io.cmd_reader.html#smac.utils.io.cmd_reader.CMDReader">CMDReader (class in smac.utils.io.cmd_reader)</a>
 </li>
       <li><a href="apidoc/smac.runhistory.runhistory.html#smac.runhistory.runhistory.RunHistory.compute_all_costs">compute_all_costs() (smac.runhistory.runhistory.RunHistory method)</a>
@@ -403,14 +405,14 @@
 </li>
       <li><a href="apidoc/smac.runhistory.runhistory.html#smac.runhistory.runhistory.RunHistory.config_ids">config_ids (smac.runhistory.runhistory.RunHistory attribute)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="apidoc/smac.optimizer.epils.html#smac.optimizer.epils.EPILS_Solver.config_space">config_space (smac.optimizer.epils.EPILS_Solver attribute)</a>
 
       <ul>
         <li><a href="apidoc/smac.optimizer.smbo.html#smac.optimizer.smbo.SMBO.config_space">(smac.optimizer.smbo.SMBO attribute)</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="apidoc/smac.initial_design.multi_config_initial_design.html#smac.initial_design.multi_config_initial_design.MultiConfigInitialDesign.configs">configs (smac.initial_design.multi_config_initial_design.MultiConfigInitialDesign attribute)</a>
 </li>
       <li><a href="apidoc/smac.utils.io.cmd_reader.html#smac.utils.io.cmd_reader.ConfigurableHelpFormatter">ConfigurableHelpFormatter (class in smac.utils.io.cmd_reader)</a>
