--- a/dev/_modules/smac/facade/func_facade.html
+++ b/dev/_modules/smac/facade/func_facade.html
@@ -268,9 +268,10 @@
               <span class="n">bounds</span><span class="p">:</span> <span class="n">typing</span><span class="o">.</span><span class="n">List</span><span class="p">[</span><span class="n">typing</span><span class="o">.</span><span class="n">List</span><span class="p">[</span><span class="nb">float</span><span class="p">]],</span>
               <span class="n">maxfun</span><span class="p">:</span> <span class="nb">int</span><span class="o">=-</span><span class="mi">1</span><span class="p">,</span>
               <span class="n">rng</span><span class="p">:</span> <span class="n">np</span><span class="o">.</span><span class="n">random</span><span class="o">.</span><span class="n">RandomState</span><span class="o">=</span><span class="kc">None</span><span class="p">,</span>
-              <span class="n">scenario_args</span><span class="p">:</span> <span class="n">typing</span><span class="o">.</span><span class="n">Mapping</span><span class="p">[</span><span class="nb">str</span><span class="p">,</span><span class="n">typing</span><span class="o">.</span><span class="n">Any</span><span class="p">]</span><span class="o">=</span><span class="kc">None</span><span class="p">,</span>
+              <span class="n">scenario_args</span><span class="p">:</span> <span class="n">typing</span><span class="o">.</span><span class="n">Mapping</span><span class="p">[</span><span class="nb">str</span><span class="p">,</span> <span class="n">typing</span><span class="o">.</span><span class="n">Any</span><span class="p">]</span><span class="o">=</span><span class="kc">None</span><span class="p">,</span>
               <span class="o">**</span><span class="n">kwargs</span><span class="p">):</span>
-    <span class="sd">&quot;&quot;&quot; Minimize a function func using the SMAC algorithm.</span>
+    <span class="sd">&quot;&quot;&quot;</span>
+<span class="sd">    Minimize a function func using the SMAC algorithm.</span>
 <span class="sd">    This function is a convenience wrapper for the SMAC class.</span>
 
 <span class="sd">    Parameters</span>
@@ -292,7 +293,7 @@
 <span class="sd">    **kwargs:</span>
 <span class="sd">        Arguments passed to the optimizer class</span>
 <span class="sd">        See ~smac.facade.smac_facade.SMAC</span>
-<span class="sd">        </span>
+
 <span class="sd">    Returns</span>
 <span class="sd">    -------</span>
 <span class="sd">    x : list</span>
@@ -302,6 +303,7 @@
 <span class="sd">    s : :class:`smac.facade.smac_facade.SMAC`</span>
 <span class="sd">        SMAC objects which enables the user to get</span>
 <span class="sd">        e.g., the trajectory and runhistory.</span>
+
 <span class="sd">    &quot;&quot;&quot;</span>
     <span class="c1"># create configuration space</span>
     <span class="n">cs</span> <span class="o">=</span> <span class="n">ConfigurationSpace</span><span class="p">()</span>
@@ -326,10 +328,10 @@
         <span class="s2">&quot;deterministic&quot;</span><span class="p">:</span> <span class="s2">&quot;true&quot;</span><span class="p">,</span>
         <span class="s2">&quot;initial_incumbent&quot;</span><span class="p">:</span> <span class="s2">&quot;DEFAULT&quot;</span><span class="p">,</span>
     <span class="p">}</span>
-    
+
     <span class="k">if</span> <span class="n">scenario_args</span> <span class="ow">is</span> <span class="ow">not</span> <span class="kc">None</span><span class="p">:</span>
         <span class="n">scenario_dict</span><span class="o">.</span><span class="n">update</span><span class="p">(</span><span class="n">scenario_args</span><span class="p">)</span>
-    
+
     <span class="k">if</span> <span class="n">maxfun</span> <span class="o">&gt;</span> <span class="mi">0</span><span class="p">:</span>
         <span class="n">scenario_dict</span><span class="p">[</span><span class="s2">&quot;runcount_limit&quot;</span><span class="p">]</span> <span class="o">=</span> <span class="n">maxfun</span>
     <span class="n">scenario</span> <span class="o">=</span> <span class="n">Scenario</span><span class="p">(</span><span class="n">scenario_dict</span><span class="p">)</span>
@@ -342,8 +344,7 @@
     <span class="n">incumbent_performance</span> <span class="o">=</span> <span class="n">smac</span><span class="o">.</span><span class="n">solver</span><span class="o">.</span><span class="n">runhistory</span><span class="o">.</span><span class="n">data</span><span class="p">[</span><span class="n">run_key</span><span class="p">]</span>
     <span class="n">incumbent</span> <span class="o">=</span> <span class="n">np</span><span class="o">.</span><span class="n">array</span><span class="p">([</span><span class="n">incumbent</span><span class="p">[</span><span class="n">tmplt</span><span class="o">.</span><span class="n">format</span><span class="p">(</span><span class="n">idx</span> <span class="o">+</span> <span class="mi">1</span><span class="p">)]</span>
                           <span class="k">for</span> <span class="n">idx</span> <span class="ow">in</span> <span class="nb">range</span><span class="p">(</span><span class="nb">len</span><span class="p">(</span><span class="n">bounds</span><span class="p">))],</span> <span class="n">dtype</span><span class="o">=</span><span class="n">np</span><span class="o">.</span><span class="n">float</span><span class="p">)</span>
-    <span class="k">return</span> <span class="n">incumbent</span><span class="p">,</span> <span class="n">incumbent_performance</span><span class="o">.</span><span class="n">cost</span><span class="p">,</span> \
-           <span class="n">smac</span></div>
+    <span class="k">return</span> <span class="n">incumbent</span><span class="p">,</span> <span class="n">incumbent_performance</span><span class="o">.</span><span class="n">cost</span><span class="p">,</span> <span class="n">smac</span></div>
 </pre></div>
 
            </div>
