--- a/dev/_modules/smac/facade/roar_facade.html
+++ b/dev/_modules/smac/facade/roar_facade.html
@@ -268,7 +268,8 @@
 
 
 <div class="viewcode-block" id="ROAR"><a class="viewcode-back" href="../../../apidoc/smac.facade.roar_facade.html#smac.facade.roar_facade.ROAR">[docs]</a><span class="k">class</span> <span class="nc">ROAR</span><span class="p">(</span><span class="n">SMAC</span><span class="p">):</span>
-    <span class="sd">&quot;&quot;&quot;Facade to use ROAR mode</span>
+    <span class="sd">&quot;&quot;&quot;</span>
+<span class="sd">    Facade to use ROAR mode</span>
 
 <span class="sd">    Attributes</span>
 <span class="sd">    ----------</span>
@@ -277,6 +278,7 @@
 <span class="sd">    See Also</span>
 <span class="sd">    --------</span>
 <span class="sd">    :class:`~smac.facade.smac_facade.SMAC`</span>
+
 <span class="sd">    &quot;&quot;&quot;</span>
 
     <span class="k">def</span> <span class="nf">__init__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span>
@@ -289,7 +291,8 @@
                  <span class="n">stats</span><span class="p">:</span> <span class="n">Stats</span><span class="o">=</span><span class="kc">None</span><span class="p">,</span>
                  <span class="n">rng</span><span class="p">:</span> <span class="n">np</span><span class="o">.</span><span class="n">random</span><span class="o">.</span><span class="n">RandomState</span><span class="o">=</span><span class="kc">None</span><span class="p">,</span>
                  <span class="n">run_id</span><span class="p">:</span> <span class="nb">int</span><span class="o">=</span><span class="mi">1</span><span class="p">):</span>
-        <span class="sd">&quot;&quot;&quot;Constructor</span>
+        <span class="sd">&quot;&quot;&quot;</span>
+<span class="sd">        Constructor</span>
 
 <span class="sd">        Parameters</span>
 <span class="sd">        ----------</span>
@@ -317,20 +320,21 @@
 <span class="sd">            Random number generator</span>
 <span class="sd">        run_id: int, (default: 1)</span>
 <span class="sd">            Run ID will be used as subfolder for output_dir.</span>
+
 <span class="sd">        &quot;&quot;&quot;</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">logger</span> <span class="o">=</span> <span class="n">logging</span><span class="o">.</span><span class="n">getLogger</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="vm">__module__</span> <span class="o">+</span> <span class="s2">&quot;.&quot;</span> <span class="o">+</span> <span class="bp">self</span><span class="o">.</span><span class="vm">__class__</span><span class="o">.</span><span class="vm">__name__</span><span class="p">)</span>
 
         <span class="c1"># initial random number generator</span>
-        <span class="n">num_run</span><span class="p">,</span> <span class="n">rng</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">_get_rng</span><span class="p">(</span><span class="n">rng</span><span class="o">=</span><span class="n">rng</span><span class="p">)</span>
+        <span class="n">_</span><span class="p">,</span> <span class="n">rng</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">_get_rng</span><span class="p">(</span><span class="n">rng</span><span class="o">=</span><span class="n">rng</span><span class="p">)</span>
 
         <span class="c1"># initial conversion of runhistory into EPM data</span>
         <span class="c1"># since ROAR does not really use it the converted data</span>
         <span class="c1"># we simply use a cheap RunHistory2EPM here</span>
         <span class="n">num_params</span> <span class="o">=</span> <span class="nb">len</span><span class="p">(</span><span class="n">scenario</span><span class="o">.</span><span class="n">cs</span><span class="o">.</span><span class="n">get_hyperparameters</span><span class="p">())</span>
-        <span class="n">runhistory2epm</span> <span class="o">=</span> <span class="n">RunHistory2EPM4Cost</span>\
-            <span class="p">(</span><span class="n">scenario</span><span class="o">=</span><span class="n">scenario</span><span class="p">,</span> <span class="n">num_params</span><span class="o">=</span><span class="n">num_params</span><span class="p">,</span>
-             <span class="n">success_states</span><span class="o">=</span><span class="p">[</span><span class="n">StatusType</span><span class="o">.</span><span class="n">SUCCESS</span><span class="p">,</span> <span class="p">],</span>
-             <span class="n">impute_censored_data</span><span class="o">=</span><span class="kc">False</span><span class="p">,</span> <span class="n">impute_state</span><span class="o">=</span><span class="kc">None</span><span class="p">)</span>
+        <span class="n">runhistory2epm</span> <span class="o">=</span> <span class="n">RunHistory2EPM4Cost</span><span class="p">(</span>
+            <span class="n">scenario</span><span class="o">=</span><span class="n">scenario</span><span class="p">,</span> <span class="n">num_params</span><span class="o">=</span><span class="n">num_params</span><span class="p">,</span>
+            <span class="n">success_states</span><span class="o">=</span><span class="p">[</span><span class="n">StatusType</span><span class="o">.</span><span class="n">SUCCESS</span><span class="p">,</span> <span class="p">],</span>
+            <span class="n">impute_censored_data</span><span class="o">=</span><span class="kc">False</span><span class="p">,</span> <span class="n">impute_state</span><span class="o">=</span><span class="kc">None</span><span class="p">)</span>
 
         <span class="n">aggregate_func</span> <span class="o">=</span> <span class="n">average_cost</span>
         <span class="c1"># initialize empty runhistory</span>
